create account and log in working

--- a/resources/public/css/spendy_addons.css
+++ b/resources/public/css/spendy_addons.css
@@ -77,7 +77,7 @@ div.queue-item h1, h2, h3, h4, h5, h6  {
     box-shadow:  0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-#new-item {
+.pad-right {
     margin-right: 40px
 }
 
