progress bar, about page, fixed buy button

--- a/resources/public/css/spendy_addons.css
+++ b/resources/public/css/spendy_addons.css
@@ -67,7 +67,8 @@ div.queue-item h1, h2, h3, h4, h5, h6  {
     margin-right: 40px;
     padding-left: 10px;
     padding-right: 10px;
-    min-height: 85px;
+    padding-bottom: 5px;
+    overflow: auto;
     border: 1px solid #eee;
     border: 1px solid rgba(0, 0, 0, 0.05);
     -webkit-border-radius: 4px;
