sessions working, logout not yet

--- a/resources/public/css/spendy_addons.css
+++ b/resources/public/css/spendy_addons.css
@@ -1,15 +1,13 @@
  /* Override some defaults */
 html, body {
-    background: -webkit-gradient(linear, 
-	left top, 
-	right top, 
-	color-stop(0%,#CEC), 
-	color-stop(4%,#DFD), 
-	color-stop(35%,#EFE), 
-	color-stop(65%,#EFE),
-	color-stop(96%,#DFD), 
-	color-stop(100%,#CEC));
-    background-color: #B6FF9C;
+background: rgb(248,255,232); /* Old browsers */
+background: -moz-radial-gradient(center, ellipse cover, rgba(248,255,232,1) 22%, rgba(198,239,210,1) 84%, rgba(160,219,176,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(22%,rgba(248,255,232,1)), color-stop(84%,rgba(198,239,210,1)), color-stop(100%,rgba(160,219,176,1))); /* Chrome,Safari4+ */
+background: -webkit-radial-gradient(center, ellipse cover, rgba(248,255,232,1) 22%,rgba(198,239,210,1) 84%,rgba(160,219,176,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-radial-gradient(center, ellipse cover, rgba(248,255,232,1) 22%,rgba(198,239,210,1) 84%,rgba(160,219,176,1) 100%); /* Opera 12+ */
+background: -ms-radial-gradient(center, ellipse cover, rgba(248,255,232,1) 22%,rgba(198,239,210,1) 84%,rgba(160,219,176,1) 100%); /* IE10+ */
+background: radial-gradient(center, ellipse cover, rgba(248,255,232,1) 22%,rgba(198,239,210,1) 84%,rgba(160,219,176,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#a0dbb0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
     background-repeat-x: initial;
     background-repeat-y: initial;
