--- a/resources/public/css/spendy_addons.css
+++ b/resources/public/css/spendy_addons.css
@@ -32,12 +32,25 @@ body {
 
 }
 .item-image {
+    margin-right: 20px;
     float: left;   
     width: 20%;
+    background: white;
+    border: 1px solid #eee;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+
+}
+.centered-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .item-main {
     float: left;
-    width: 55%;
+    width: 45%;
 }
 .item-buttons {
     margin-top: 30px;
@@ -77,6 +90,10 @@ div.queue-item h1, h2, h3, h4, h5, h6  {
     box-shadow:  0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
+#money-rate {
+    width:auto;
+}
+
 .pad-right {
     margin-right: 40px
 }
@@ -110,13 +127,8 @@ div.queue-item h1, h2, h3, h4, h5, h6  {
 .content .span4 {
     min-height: 500px;
 }
-/* Give a quick and non-cross-browser friendly divider */
-.content .span4 {
-    margin-left: 0;
-    padding-left: 19px;
-    border-left: 1px solid #eee;
-}
 
-.topbar .btn {
+.navbar .btn {
     border: 0;
 }
+
